--- a/src/css/index.css
+++ b/src/css/index.css
@@ -49,3 +49,18 @@ h1 {
 .nav-button {
   @apply inline-flex p-4 md:hidden hover:cursor-pointer;
 }
+.nav-svg:hover path{
+  fill: #001270;
+}
+.button-wrapper {
+  @apply flex flex-row gap-4 py-8;
+}
+.btn {
+  @apply px-8 py-2.5 bg-transparent border-2 uppercase tracking-wide transition-colors duration-300 ease-in-out;
+}
+.primary-btn {
+  @apply bg-[#3A3AEE] border-[#3A3AEE] text-white rounded-full hover:bg-[#001270] hover:text-[#FFF] hover:border-[#001270];
+}
+.secondary-btn {
+  @apply bg-transparent border-[#FFF] rounded-full text-white hover:bg-[#FFF] hover:text-[#3A3AEE];
+}
