Hero and nav refinements

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -4,6 +4,7 @@
 body, p {
   font-family: 'Barlow Condensed', sans-serif;
    @apply text-lg font-normal tracking-normal;
+   font-size: 16px;
 }
 h1, h2, h3, h4, h5, h6 {
   @apply font-bold;
@@ -18,11 +19,7 @@ h1 {
   @apply relative flex flex-col;
 }
 .hero-image {
-  @apply absolute h-screen;
-  background-color: linear-gradient(0deg, rgba(4, 7, 22, 0.7), rgba(4, 7, 22, 0.7));
-}
-.hero-image img {
-  @apply relative z-10 h-screen;
+  @apply absolute h-screen w-full bg-center bg-cover;
 }
 .hero-content {
   @apply absolute z-20 text-white items-start justify-center flex flex-col pl-6 h-screen max-w-2xl;
@@ -36,18 +33,21 @@ h1 {
   @apply fixed z-50 p-4 w-full;
 }
 .nav-wrapper {
-  @apply flex flex-row w-full justify-between items-center;
+  @apply flex flex-row w-full justify-between items-center py-4;
   background: rgba(255, 255, 255, 0.9);
   border-radius: 6px;
 }
-.nav-item, .nav-item-dropdown, .nav-logo {
+.nav-item, .nav-item-dropdown {
   @apply relative uppercase p-4 tracking-wide text-lg;
 }
+.nav-logo {
+  @apply relative pl-4;
+}
 .nav-item {
-  @apply hidden md:inline-flex hover:text-[#3A3AEE] transition-colors duration-300 ease-in-out;
+  @apply hidden lg:inline-flex hover:text-[#3A3AEE] transition-colors duration-300 ease-in-out;
 }
 .nav-button {
-  @apply inline-flex p-4 md:hidden hover:cursor-pointer;
+  @apply inline-flex px-4 lg:hidden hover:cursor-pointer;
 }
 .nav-svg:hover path{
   fill: #001270;
@@ -56,11 +56,19 @@ h1 {
   @apply flex flex-row gap-4 py-8;
 }
 .btn {
-  @apply px-8 py-2.5 bg-transparent border-2 uppercase tracking-wide transition-colors duration-300 ease-in-out;
+  @apply px-6 md:px-8 py-2.5 bg-transparent border-2 uppercase tracking-wide transition-colors duration-300 ease-in-out;
 }
 .primary-btn {
   @apply bg-[#3A3AEE] border-[#3A3AEE] text-white rounded-full hover:bg-[#001270] hover:text-[#FFF] hover:border-[#001270];
 }
 .secondary-btn {
   @apply bg-transparent border-[#FFF] rounded-full text-white hover:bg-[#FFF] hover:text-[#3A3AEE];
+}
+
+/* SiteBuilder Specific */
+#main, .cat-description {
+  @apply pt-[80px];
+}
+.img-logo {
+  @apply min-w-[140px];
 }
