--- a/src/css/index.css
+++ b/src/css/index.css
@@ -56,13 +56,21 @@ h1 {
   @apply flex flex-row gap-4 py-8;
 }
 .btn {
-  @apply px-6 md:px-8 py-2.5 bg-transparent border-2 uppercase tracking-wide transition-colors duration-300 ease-in-out;
+  @apply px-6 md:px-8 py-2.5 bg-transparent border-2 uppercase tracking-wide transition-colors duration-300 ease-in-out hover:cursor-pointer;
 }
 .primary-btn {
-  @apply bg-[#3A3AEE] border-[#3A3AEE] text-white rounded-full hover:bg-[#001270] hover:text-[#FFF] hover:border-[#001270];
+  @apply bg-[#3A3AEE] border-[#3A3AEE] text-white rounded-full hover:bg-[#001270] hover:text-[#FFF] hover:border-[#001270] hover:cursor-pointer;
 }
 .secondary-btn {
-  @apply bg-transparent border-[#FFF] rounded-full text-white hover:bg-[#FFF] hover:text-[#3A3AEE] tracking-wide;
+  @apply bg-transparent border-[#FFF] rounded-full text-white hover:bg-[#FFF] hover:text-[#3A3AEE] tracking-wide hover:cursor-pointer;
+}
+form .secondary-btn {
+  @apply border-[#6E7383] text-[#6D6D6D] hover:bg-[#6D6D6D] hover:text-[#FFF] py-1;
+  border-width: 1px;
+}
+form .primary-btn {
+  @apply bg-transparent border-[#6E7383] text-[#6D6D6D] hover:bg-[#3A3AEE] hover:text-[#FFF] py-1;
+  border-width: 1px;
 }
 
 /* SiteBuilder Specific */
@@ -138,4 +146,13 @@ footer.footer {
 .footer-cta-container .secondary-btn {
   @apply py-1;
   border-width: 1px;
+}
+
+/* Modal Styles */
+.modal {
+  @apply fixed top-0 left-0 w-full h-full flex items-center justify-center bg-black bg-opacity-50;
+}
+/* Disable overflow scroll on window class */
+.modal-open {
+  @apply overflow-hidden;
 }
