--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,6 +1,7 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
+
 body, p {
   font-family: 'Barlow Condensed', sans-serif;
   @apply text-lg font-normal tracking-normal;
@@ -33,18 +34,18 @@ h1 {
   @apply fixed z-50 p-4 w-full;
 }
 .nav-wrapper {
-  @apply flex flex-row w-full justify-between items-center py-4;
+  @apply flex flex-col lg:flex-row w-full justify-between items-stretch py-1 px-4 sm:px-6 lg:px-8;
   background: rgba(255, 255, 255, 0.9);
   border-radius: 6px;
 }
 .nav-item, .nav-item-dropdown {
-  @apply relative uppercase p-4 tracking-wide text-lg;
+  @apply relative uppercase py-4 px-4 tracking-wide text-lg;
 }
 .nav-logo {
-  @apply relative pl-4;
+  @apply relative;
 }
 .nav-item {
-  @apply hidden lg:inline-flex hover:text-[#3A3AEE] transition-colors duration-300 ease-in-out;
+  @apply relative hidden lg:inline-flex hover:text-[#3A3AEE] transition-colors duration-300 ease-in-out cursor-pointer;
 }
 .nav-button {
   @apply inline-flex px-4 lg:hidden hover:cursor-pointer;
@@ -52,9 +53,38 @@ h1 {
 .nav-svg:hover path{
   fill: #001270;
 }
+.mobile-nav-item {
+  @apply relative block px-3 py-2 text-[#030D2B] hover:text-[#3A3AEE] text-xl uppercase tracking-wide;
+}
+.dropdown-menu {
+  @apply absolute right-0 top-full z-10 origin-top-right rounded-md bg-[#3A3AEE] py-0 shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none;
+}
+
+.dropdown-item {
+  @apply block p-4 text-lg text-white hover:text-[#000] tracking-wide;
+}
 .button-wrapper {
   @apply flex flex-row gap-4 py-8;
 }
+.nav-item-container {
+  @apply flex flex-row;
+}
+.nav-dropdown-items {
+  min-width: 150px;
+}
+.right-menu {
+  @apply flex flex-col bg-[#2828B2] text-white py-0 px-0 gap-y-0 rounded-md;
+  min-height: 500px;
+  min-width: 200px;
+}
+.right-nav-item {
+  @apply flex flex-row flex-wrap items-center hover:bg-[#1a1a72] pr-8 transition-colors duration-300 ease-in-out cursor-pointer normal-case py-2;
+}
+.right-nav-item img {
+  @apply ml-4 mr-4;
+}
+
+/* Buttons */
 .btn {
   @apply px-6 md:px-8 py-2.5 bg-transparent border-2 uppercase tracking-wide transition-colors duration-300 ease-in-out cursor-pointer;
 }
@@ -113,7 +143,7 @@ footer.footer {
   @apply text-sm opacity-80;
 }
 .horizontal-nav {
-  @apply flex flex-row justify-center space-x-8 mb-4 py-8;
+  @apply flex flex-col lg:flex-row justify-center space-x-8 mb-4 py-8;
   border-bottom: 1px solid #2D3047;
 }
 .horizontal-nav > li > a {
@@ -147,34 +177,56 @@ footer.footer {
   border-width: 1px;
 }
 
-/* Modal Styles */
-.modal-inner {
-  @apply inline-block bg-white rounded-lg text-left shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-4xl sm:w-full;
-}
+/* Modal */
 .modal {
   @apply fixed top-10 sm:top-0 left-0 w-full h-full flex items-center justify-center bg-black bg-opacity-50;
 }
-/* Disable overflow scroll on window class */
 .modal-open {
   @apply overflow-hidden;
+}
+.modal-close {
+  @apply absolute top-0 right-0 mt-4 mr-4 p-2 border-[#030D2B] rounded-full hover:bg-[#3A3AEE] hover:border-[#3A3AEE] transition-all;
+  border-width: 1px;
+}
+.modal-close svg {
+  @apply transition-all;
+}
+.modal-close:hover svg {
+  @apply text-white;
+}
+.modal-inner {
+  @apply inline-block bg-white rounded-lg text-left shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-4xl sm:w-full;
 }
 .modal-flex {
   @apply flex items-center justify-center pt-4 px-4 pb-20 text-center sm:block sm:p-0 sm:mt-0;
 }
-.form-label {
-  @apply text-sm font-medium text-gray-700 hidden;
-}
-.form-input {
-  @apply mt-1 block w-full rounded-full border-gray-300 shadow-sm focus:border-[#3A3AEE] focus:ring-[#3A3AEE] sm:text-sm;
-}
-.form-select {
-  @apply mt-1 block w-full rounded-full border border-gray-300 bg-white py-2 px-3 shadow-sm focus:border-[#3A3AEE] focus:outline-none focus:ring-[#3A3AEE] sm:text-sm;
-}
+/* Modal Headline */
 .modal-headline {
   @apply py-12 px-6 text-center;
 }
 .modal-headline h3 {
-  @apply text-xl;
+  @apply text-xl font-normal mt-2;
+}
+.modal-headline p{ 
+  @apply text-lg font-light;
+}
+.modal-headline img {
+  @apply w-auto mx-auto;
+}
+
+/* Form Labels & Inputs */
+.form-label {
+  @apply text-sm font-medium text-[#030D2B] hidden;
+}
+.form-input {
+  @apply block w-full rounded-full border-[#030D2B] shadow-sm focus:border-[#3A3AEE] focus:ring-[#3A3AEE] sm:text-lg;
+  padding-top: 0.275rem;
+  padding-bottom: 0.275rem;
+}
+.form-select {
+  @apply block w-full rounded-full border border-[#030D2B] bg-white px-3 shadow-sm focus:border-[#3A3AEE] focus:outline-none focus:ring-[#3A3AEE] sm:text-lg;
+  padding-top: 0.275rem;
+  padding-bottom: 0.275rem;
 }
 .form-textarea {
   @apply px-4 py-2 rounded-2xl;
